lecture_source/docker_k8s/02_pod_docterm.yaml
apiVersion: v1
kind: Pod

metadata:
  name: docterm01

spec:
  containers:
  - name: docterm
    image: nockchun/docterm:latest
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Pod

metadata:
  name: docterm02

spec:
  containers:
  - name: docterm
    image: nockchun/docterm:latest
    ports:
    - containerPort: 80
