lecture_source/docker_k8s/21_volume_empty_local.yaml
apiVersion: v1
kind: Pod

metadata:
  name: empty-local

spec:
  volumes:
  - name: vol-empty
    emptyDir: {}
  - name: vol-mem
    emptyDir:
      medium: "Memory"
  - name: vol-host
    hostPath:
      path: /data/share_docker
      type: Directory

  containers:
  - name: docterm
    image: nockchun/docterm:latest
    volumeMounts:
    - mountPath: /data
      name: vol-empty
  - name: ubuntu
    image: ubuntu:14.04
    command: ["tail", "-f", "/dev/null"]
    volumeMounts:
    - mountPath: /data
      name: vol-empty

  # nodeSelector:
  #   kubernetes.io/hostname: node18
