lecture_source/docker_k8s/06_volume_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: vol-svc

spec:
  selector:
    app: vol-deploy
  ports:
  - name: http
    port: 80
