lecture_source/docker_k8s/13_gluster-provisioner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gluster-demo-pod
  namespace: rsnet-demo
  labels:
    name: gluster-demo-pod
spec:
  containers:
  - name: gluster-demo-pod
    image: nockchun/docterm:latest
    ports:
    - name: web
      containerPort: 80
    volumeMounts:
    - name: gluster-vol1
      mountPath: /gvol
      readOnly: false
  volumes:
  - name: gluster-vol1
    persistentVolumeClaim:
      claimName: gluster-claim
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: rsnet-demo
spec:
  ports:
  - port: 1
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: rsnet-demo
subsets:
  - addresses:
      - ip: 10.10.1.111
    ports:
      - port: 1
  - addresses:
      - ip: 10.10.1.112
    ports:
      - port: 1
  - addresses:
      - ip: 10.10.1.113
    ports:
      - port: 1
  - addresses:
      - ip: 10.10.1.114
    ports:
      - port: 1
