lecture_source/docker_k8s/13_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ig1.realstudy.net
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
  - host: ig2.realstudy.net
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
