lecture_source/docker_k8s/16_ingress_tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - first.example.com
    secretName: quickstart-example-tls
  rules:
  - host: first.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
